<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.AuthFragment"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input"
        android:layout_marginTop="16dp"
        android:textColor="@color/text_color_1"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@id/btn_sign_in"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_email"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/email"
        android:textColor="@color/text_color_1"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/btn_sign_in"
        app:layout_constraintBottom_toTopOf="@id/email"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/tv_password"
        app:layout_constraintEnd_toEndOf="@id/btn_sign_in"
        app:layout_constraintStart_toStartOf="@id/btn_sign_in">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:textColorHint="@color/text_color_2"
            android:textColor="@color/text_color_1"
            android:background="@drawable/bg_text_field"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/password"
        android:textColor="@color/text_color_1"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintBottom_toTopOf="@id/password"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@id/btn_sign_in"
        app:layout_constraintStart_toStartOf="@id/btn_sign_in"
        app:layout_constraintBottom_toTopOf="@id/btn_sign_in">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:textColorHint="@color/text_color_2"
            android:textColor="@color/text_color_1"
            android:background="@drawable/bg_text_field"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.911"
        android:background="@drawable/bg_btn_auth_selector"
        android:text="@string/input"
        android:textAllCaps="false"
        android:textColor="@color/text_color_1"
        android:focusable="true"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/no_account"
        android:textColor="@color/text_color_1"
        app:layout_constraintStart_toStartOf="@id/btn_sign_in"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_in"
        app:layout_constraintEnd_toEndOf="@id/btn_sign_in"/>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pass"
        android:textColor="@color/btn_bg_color_1"
        app:layout_constraintStart_toStartOf="@id/tv_no_account"
        app:layout_constraintTop_toBottomOf="@id/tv_no_account"
        app:layout_constraintEnd_toEndOf="@id/tv_no_account"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_in_vk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        app:layout_constraintWidth_percent="0.433"
        android:textColor="@color/text_color_1"
        android:textAllCaps="false"
        android:background="@drawable/ic_btn_vk"
        app:layout_constraintStart_toStartOf="@id/btn_sign_in"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_in_ok"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.433"
        android:textColor="@color/text_color_1"
        android:textAllCaps="false"
        android:background="@drawable/ic_btn_ok"
        app:layout_constraintEnd_toEndOf="@id/btn_sign_in"
        app:layout_constraintTop_toTopOf="@id/btn_sign_in_vk" />

</androidx.constraintlayout.widget.ConstraintLayout>