<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_java_developer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_bookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:src="@drawable/ic_bookmark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_back" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.5"
        android:background="@drawable/bg_text_field"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_course_rating"
        app:layout_constraintEnd_toEndOf="@id/tv_course_rating"
        app:layout_constraintStart_toStartOf="@id/tv_course_rating"
        app:layout_constraintTop_toTopOf="@id/tv_course_rating" />

    <TextView
        android:id="@+id/tv_course_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:drawableStart="@drawable/ic_star_fill"
        android:drawablePadding="4dp"
        android:elevation="5dp"
        android:gravity="center"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:textColor="@color/text_color_1"
        app:layout_constraintBottom_toBottomOf="@id/iv_logo"
        app:layout_constraintStart_toStartOf="@id/iv_logo" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.5"
        android:background="@drawable/bg_text_field"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_start_date"
        app:layout_constraintEnd_toEndOf="@id/tv_start_date"
        app:layout_constraintStart_toStartOf="@id/tv_start_date"
        app:layout_constraintTop_toTopOf="@id/tv_start_date" />

    <TextView
        android:id="@+id/tv_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:elevation="5dp"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:textColor="@color/text_color_1"
        app:layout_constraintBottom_toBottomOf="@id/tv_course_rating"
        app:layout_constraintStart_toEndOf="@id/tv_course_rating"
        app:layout_constraintTop_toTopOf="@id/tv_course_rating" />

    <TextView
        android:id="@+id/tv_course_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/text_color_1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/iv_logo"
        app:layout_constraintTop_toBottomOf="@id/iv_logo" />

    <ImageView
        android:id="@+id/iv_author_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/img_merion_academy_logo"
        app:layout_constraintStart_toStartOf="@id/tv_course_title"
        app:layout_constraintTop_toBottomOf="@id/tv_course_title" />

    <LinearLayout
        android:id="@+id/author_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/iv_author_logo"
        app:layout_constraintStart_toEndOf="@id/iv_author_logo"
        app:layout_constraintTop_toTopOf="@id/iv_author_logo">

        <TextView
            android:id="@+id/tv_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Автор"
            android:textColor="@color/text_color_3"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_author_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Merion Academy"
            android:textColor="@color/text_color_1"
            android:textSize="16sp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_begin_course"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_btn_auth_selector"
        android:text="@string/begin_course"
        android:textAllCaps="false"
        android:textColor="@color/text_color_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_author_logo"
        app:layout_constraintWidth_percent="0.911" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_transition_platform"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_text_field"
        android:text="@string/transition_platform"
        android:textAllCaps="false"
        android:textColor="@color/text_color_1"
        app:layout_constraintEnd_toEndOf="@id/btn_begin_course"
        app:layout_constraintStart_toStartOf="@id/btn_begin_course"
        app:layout_constraintTop_toBottomOf="@id/btn_begin_course" />

    <TextView
        android:id="@+id/tv_course_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="О курсе"
        android:textColor="@color/text_color_1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/iv_author_logo"
        app:layout_constraintTop_toBottomOf="@id/btn_transition_platform" />

    <TextView
        android:id="@+id/tv_course_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:lineHeight="20sp"
        android:text="@string/hardcod_text"
        android:textColor="@color/text_color_1"
        app:layout_constraintEnd_toEndOf="@id/iv_bookmark"
        app:layout_constraintStart_toStartOf="@id/tv_course_about"
        app:layout_constraintTop_toBottomOf="@id/tv_course_about" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>